Fixed layout issues

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,12 +1,12 @@
 .contactsBlock {
-    height: 50vh;
-    background: darkslategrey;
+    min-height: 40vh;
+    background: #254433;
 }
 
 .contactsContainer {
     flex-direction: column;
     justify-content: flex-start;
-
+    background: darkslategrey;
 }
 
 .form {
@@ -15,20 +15,27 @@
     margin-bottom: 10px;
     width: 80%;
     align-items: center;
+    background: #badc9b;
+    box-sizing: border-box;
 }
 
 .firstInput {
     margin-bottom: 10px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .secondInput {
     margin-bottom: 10px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .textarea {
     width: 100%;
-    height: 80%;
     resize: none;
+    box-sizing: border-box;
+}
+.title {
+    background: lightcyan;
 }
