--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,13 +1,14 @@
 .footerBlock {
-    height: 20vh;
+    min-height: 20vh;
     background: teal;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .socialNetwork {
     display: flex;
     flex-direction: row;
-    width: min-content;
     background: gold;
+    width: 50%;
     justify-content: space-between;
 }
