--- a/src/footer/socialNetwork/SocialNetwork.module.css
+++ b/src/footer/socialNetwork/SocialNetwork.module.css
@@ -2,6 +2,6 @@
     display: flex;
 }
 .img {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
 }
