--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -10,7 +10,6 @@
 
 .photoContainer {
     width: 300px;
-    height: 400px;
     background: chartreuse;
     align-items: center;
     display: flex;
